--- a/charts/charts/f5-configmap/v0.0.1/questions.yml
+++ b/charts/charts/f5-configmap/v0.0.1/questions.yml
@@ -12,7 +12,7 @@ questions:
   type: string
   label: Config F5 Configmap Name
   group: "F5负载均衡配置"
-- variable: mode
+- variable: vs_mode
   default: "Set Virtual Server Mode"
   required: true
   description: "设置F5提供负载均衡的Virtual Server模式"
