--- a/charts/charts/f5-configmap/v0.0.1/templates/configmap.yaml
+++ b/charts/charts/f5-configmap/v0.0.1/templates/configmap.yaml
@@ -11,7 +11,7 @@ data:
       "virtualServer": {
         "frontend": {
           "balance": "{{ .Values.lbmethod }}",
-          "mode": {{ .Values.vs_mode }},
+          "mode": "{{ .Values.vs_mode }}",
           "partition": "{{ .Values.partiton }}",
           "virtualAddress": {
             "bindAddr": "{{ .Values.vs_ip }}",
