--- a/charts/charts/f5-configmap/v0.0.1/templates/configmap.yaml
+++ b/charts/charts/f5-configmap/v0.0.1/templates/configmap.yaml
@@ -11,11 +11,11 @@ data:
       "virtualServer": {
         "frontend": {
           "balance": "{{ .Values.lbmethod }}",
-          "mode": "{{ .Values.vs_mode }}",
+          "mode": "{{ .Values.vsmode }}",
           "partition": "{{ .Values.partiton }}",
           "virtualAddress": {
-            "bindAddr": "{{ .Values.vs_ip }}",
-            "port": {{ .Valuses.vs_port }}
+            "bindAddr": "{{ .Values.vsip }}",
+            "port": {{ .Valuses.vsport }}
           }
         },
         "backend": {
