--- a/charts/charts/f5-configmap/v0.0.1/templates/configmap.yaml
+++ b/charts/charts/f5-configmap/v0.0.1/templates/configmap.yaml
@@ -15,7 +15,7 @@ data:
           "partition": "{{ .Values.partiton }}",
           "virtualAddress": {
             "bindAddr": "{{ .Values.vsip }}",
-            "port": {{ .Valuses.vsport }}
+            "port": "{{ .Valuses.vsport }}"
           }
         },
         "backend": {
