--- a/charts/charts/f5-configmap/v0.0.1/Chart.yaml
+++ b/charts/charts/f5-configmap/v0.0.1/Chart.yaml
@@ -5,8 +5,10 @@ appVersion: 0.0.1
 description: F5 CIS customied virtual server configmap
 keywords:
 - F5
-- LB
-home: https://clouddocs.f5.com/training/community/containers/html/
+- rancher
+- cis
+- configmap
+home: https://clouddocs.f5.com/
 icon: file://../f5-logo.svg
 sources:
 - https://github.com/kubernetes/charts
