--- a/charts/charts/f5-ingress/v0.0.1/Chart.yaml
+++ b/charts/charts/f5-ingress/v0.0.1/Chart.yaml
@@ -1,17 +1,14 @@
-apiVersion: v1
-appVersion: "1.5"
-description: A Helm chart for Kubernetes
-name: f5cisingressv2
-version: 0.5.0
-
+name: f5-cis-ingress
+version: 0.0.1
+apiVersion: 0.0.1
+description: F5 CIS customied virtual server ingress
+keywords:
+- F5
+- rancher
+- cis
+- configmap
 home: https://clouddocs.f5.com/
 icon: file://../f5.logo.png
-keywords:
-- f5
-- ingress
-- cis
-- rancher
-
 maintainers:
-- email: jianhong@rancher.com
-  name: KrisYe
+- email: hongyu@rancher.com
+  name: hongyu
