--- a/charts/charts/f5-ingress/v0.0.1/templates/ingress.yaml
+++ b/charts/charts/f5-ingress/v0.0.1/templates/ingress.yaml
@@ -47,22 +47,15 @@ metadata:
       ]
     {{- end }}
 spec:
-{{- if .Values.ingress.tls }}
   tls:
-  {{- range .Values.ingress.tls }}
-    - hosts:
-      {{- range .hosts }}
-        - {{ . | quote }}
-      {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
-{{- end }}
+    - hosts: {{ .Values.tlshosts }}
+      secretName: {{ .Values.secretname }}
   rules:
-    - host: {{ .Values.ingress.hosts.host }}
+    - host: {{ .Values.ingresshost }}
       http:
         paths:
-          - path: {{ .Values.ingress.hosts.path }}
+          - path: {{ .Values.ingresspath }}
             backend:
-              serviceName: {{ $serviceName }}
-              servicePort: {{ $svcPort }}
+              serviceName: {{ .Values.servicename }}
+              servicePort: {{ .Values.serviceport }}
 {{- end }}
